[tool.poetry]
name = "holochain-load-test"
version = "0.1.0"
description = "Load testing for Holochain"
authors = ["ThetaSinner <ThetaSinner@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
locust = "^2.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
