[tool.poetry]
name = "holochain-load-test"
version = "0.1.0"
description = "Load testing for Holochain"
authors = ["ThetaSinner <ThetaSinner@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "holochain_client_user" }
]

[tool.poetry.dependencies]
python = "^3.8"
locust = "^2.22.0"
holochain-client = {path = "../holochain-client-python"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
